traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:23: error: not found: value a
    if (estFaceMur() && a) {
                        ^Snake:28: error: not found: value b
    else if (estFaceMur() && b) {
                             ^